# DE-assignment-learn-corporation

./: .gitignore  README.md  pipeline.py  pyproject.toml
docs/: Learn Corporation - Assignment for Data Engineer position.pptx
jobs/: gold.py  silver.py
mock/: simulate_config.py  simulate_data.py
notebooks/: bronze_inspection.ipynb  gold_student_360.ipynb
transform/: __init__.py  common.py  gold.py  leads.py  learning.py  sales.py
utils/: __init__.py  paths.py  readers.py  spark.py
