[project]
name = "learn-corporation-de-assignment"
version = "0.1.0"
description = "PySpark medallion pipeline for LEARN Corporation Data Engineer assignment"
requires-python = ">=3.10"
dependencies = [
  "pyspark>=3.5.0",
  "pyarrow>=14.0.0",
  "pandas>=2.2.0",
]

[dependency-groups]
dev = [
  "jupyter>=1.0.0",
]

[tool.uv]
package = false
